--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.magic_shop">
 
     <application
@@ -10,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TEST">
         <activity
-            android:name="MainActivity"
-            android:exported="true">
+            android:name=".HomeActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
