--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TEST">
         <activity
-            android:name=".Mypage_MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,18 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Mypage_SettingActivity"/>
-        <activity android:name=".Mypage_InputPasswordActivity"/>
-        <activity android:name=".Mypage_UserInfoChangeActivity"/>
-        <activity android:name=".Mypage_ChangePasswordActivity"/>
-        <activity android:name=".Mypage_DeliveryAddressManageActivity"/>
-        <activity android:name=".Mypage_DeliveryAddressPlusActivity"/>
-        <activity android:name=".Mypage_RefundAccountManageActivity"/>
-        <activity android:name=".Mypage_OrderDeliveryListActivity"/>
-        <activity android:name=".Mypage_DeliveryCheckActivity"/>
-        <activity android:name=".Mypage_RefundExchangeListActivity"/>
-        <activity android:name=".Mypage_ReviewWriteActivity"/>
-        <activity android:name=".Mypage_ReviewListActivity"/>
+
+        <activity android:name=".CategoryProductListActivity" />
+        <activity android:name=".CategorySelectionActivity" />
 
     </application>
+
 </manifest>
