--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.magic_shop">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -61,6 +62,11 @@
         <activity android:name=".Mypage_ReviewWriteActivity"/>
         <activity android:name=".CategoryProductListActivity" />
         <activity android:name=".CategorySelectionActivity" />
+        <activity android:name=".Detailpage_MainActivity"/>
+        <activity android:name=".Detailpage_MainReviewActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".Detailpage_MainObtionSelectActivity"/>
+        <activity android:name=".RegisterActivity"/>
 
     </application>
 </manifest>
