--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.magic_shop">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -77,6 +79,7 @@
         <activity android:name=".Seller_InputPasswordActivity" />
         <activity android:name=".ShoppingBasketActivity"/>
         <activity android:name=".OrderFormActivity"/>
+
 
 
     </application>
