검색 결과페이지 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
         <activity android:name=".Seller_InputPasswordActivity" />
         <activity android:name=".ShoppingBasketActivity"/>
         <activity android:name=".OrderFormActivity"/>
+        <activity android:name=".SearchResultActivity"/>
 
 
 
