--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,10 @@
         <activity android:name=".Mypage_RefundExchangeListActivity"/>
         <activity android:name=".Mypage_UnreviewedListActivity"/>
         <activity android:name=".Mypage_ReviewedListActivity"/>
+        <activity android:name=".Mypage_QuestionListActivity"/>
+        <activity android:name=".Mypage_AnswerListActivity"/>
         <activity android:name=".Mypage_ReviewWriteActivity"/>
+        <activity android:name=".Mypage_QuestionWriteActivity"/>
         <activity android:name=".CategoryProductListActivity" />
         <activity android:name=".CategorySelectionActivity" />
         <activity android:name=".Detailpage_MainActivity"/>
